# gb_flask_blog

./: .gitignore  pyproject.toml
lesson_01/: run.py
lesson_01/blog/: README.md  app.py
lesson_02/: README.md
lesson_02/blog/: app.py  data.py
lesson_02/blog/article/: views.py
lesson_02/blog/templates/: _navbar.html  base.html
lesson_02/blog/user/: views.py
lesson_03/: README.md  wsgi.py
lesson_03/blog/: app.py  config.py  models.py  populate.py
lesson_03/blog/templates/: _right.html  base.html
lesson_03/blog/user/: views.py
lesson_04/: README.md
lesson_04/blog/: app.py  config.py  models.py
lesson_04/blog/auth/: views.py
lesson_04/blog/post/: views.py
lesson_04/blog/templates/: _navbar.html
lesson_04/migrations/versions/: 38be590c497c_.py
lesson_05/: README.md  run.py
lesson_05/blog/: models.py
lesson_05/blog/auth/: views.py
lesson_05/blog/forms/: user_forms.py
lesson_05/blog/templates/: _navbar.html
lesson_06/: Dockerfile  README.md  requirements.txt  run.py  wsgi.py
lesson_06/blog/: config.py  models.py
lesson_06/blog/auth/: views.py
lesson_06/blog/forms/: post_forms.py  user_forms.py
lesson_06/blog/post/: views.py
lesson_06/migrations/versions/: 49d6a513d359_.py
lesson_07/: README.md
lesson_07/blog/: __init__.py  config.py  functions.py  models.py  populate.py
lesson_07/blog/auth/: views.py
lesson_07/blog/forms/: post_forms.py
lesson_07/blog/post/: views.py
lesson_07/blog/templates/: _navbar.html  base.html  (+1 more)
lesson_08/: README.md  docker-compose.yaml
lesson_08/blog/: __init__.py  models.py  populate.py
(+29 files in other folders)
